# seaorm-sample

./: .env  Cargo.toml  README.md  docker-compose.yml
entity/: Cargo.toml
entity/src/: document.rs
migration/src/: lib.rs  m20220601_220000_create_documents.rs
