[package]
name = "sqlx-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"

[dependencies.sea-orm]
version = "^0.8.0"
features = [
  # "sqlx-mysql",
  "sqlx-postgres",
  # "sqlx-sqlite",
  "runtime-actix-native-tls",
  "macros",
  "debug-print"
]
